Hero and Navbar done

--- a/index.html
+++ b/index.html
@@ -7,41 +7,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="px-5">
-    <nav
-      class="border-dashed border-2 border-black flex justify-between items-center"
-    >
-      <img src="/public/logo_eduardo.webp" alt="logo_eduardo" />
-      <h1 class="font-['Playfair_Display'] text-2xl">
-        Entretien Ménager Commercial et Industriel
-      </h1>
-      <button>
-        <svg
-          width="24"
-          height="24"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          aria-hidden="true"
-          focusable="false"
-        >
-          <rect x="4" y="7.5" width="16" height="1.5"></rect>
-          <rect x="4" y="15" width="16" height="1.5"></rect>
-        </svg>
-      </button>
+  <body>
+    <nav class="flex justify-between items-center p-2 px-4">
+      <img src="/logo.png" alt="logo_eduardo" class="w-20 aspect-auto" />
+      <ul class="flex gap-5">
+        <li>Services</li>
+        <li>Contact</li>
+        <li>About us</li>
+      </ul>
     </nav>
-    <section class="flex justify-center border-dashed border-2 border-black">
-      <img src="./public/bath.jpg" alt="bath_background" width="400" />
-      <div>This is an amazing bathroom 🛀🛀</div>
-    </section>
-    <section class="flex justify-center border-dashed border-2 border-black">
-      <img src="./public/bath.jpg" alt="bath_background" width="400" />
-      <div>This is an amazing bathroom 🛀🛀</div>
+    <div class="mx-auto h-96 overflow-hidden relative">
+      <img
+        src="/hero3.jpg"
+        alt="bath_background"
+        class="absolute -top-44 z-0 blur-sm saturate-50 contrast-75"
+      />
+      <h1
+        class="font-title text-5xl font-bold absolute z-1 drop-shadow-lg text-white whitespace-nowrap top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2"
+      >
+        ENTRETIEN MÉNAGER COMMERCIAL ET INDUSTRIEL
+      </h1>
+    </div>
+    <section class="w-auto m-auto bg-red-50">
+      <div
+        class="mx-auto flex border-dashed border-2 border-black items-center w-9/12"
+      >
+        <img
+          src="/bath.jpg"
+          alt="bath_background"
+          class="object-cover aspect-square w-1/2"
+        />
+        <p class="w-1/2 bg-red-50">
+          Notre mission chez SJS est simple : fournir des services de haute
+          qualité à nos précieux clients. Notre équipe va au-delà des attentes
+          pour répondre aux besoins spécifiques de chaque propriété. Grâce à une
+          communication ouverte et à un service exceptionnel, nous espérons que
+          vous trouverez ce que vous cherchez avec nos services de nettoyage et
+          d’entretien dans le respect des consignes de sécurité. Qu’il s’agisse
+          de nettoyage commercial ou industriel nous sommes les experts et notre
+          service d’entretien saura répondre à vos attentes !!!
+        </p>
+      </div>
     </section>
   </body>
 </html>
