--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           </form>
         </div>
         <img
-          src="public/contact.jpg"
+          src="/contact.jpg"
           alt="contact"
           class="rounded-xl w-1/2"
           id="contact"
