New Section: Notre travail

--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
           />
         </a>
         <div class="flex gap-16 font-medium text-white text-xl">
+          <a href="#travail" class="max-w-sm leading-tight">
+            <span
+              class="link link-underline link-underline-black drop-shadow-md"
+            >
+              Notre Travail
+            </span>
+          </a>
           <a href="#about" class="max-w-sm leading-tight">
             <span
               class="link link-underline link-underline-black drop-shadow-md"
@@ -117,8 +124,8 @@
         </div>
       </nav>
       <img
-        src="/hero3.jpg"
-        alt="bath_background"
+        src="https://images.unsplash.com/photo-1600489000022-c2086d79f9d4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1335&q=80"
+        alt="kitchen_01"
         class="absolute z-0 -translate-y-32 brightness-50 blur-sm"
       />
       <div
@@ -152,6 +159,41 @@
             que les prix du marché.
           </span>
         </h2>
+      </div>
+    </section>
+    <section class="m-auto p-20">
+      <h2 class="font-title text-3xl text-center font-bold mb-10" id="travail">
+        Notre Travail
+      </h2>
+      <div class="grid grid-cols-2 gap-10 mx-auto content-center">
+        <div class="flex justify-center">
+          <img
+            src="https://images.unsplash.com/photo-1552242718-c5360894aecd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80"
+            alt="work2"
+            class="aspect-square rounded-lg drop-shadow-md"
+          />
+        </div>
+        <div class="flex justify-center">
+          <img
+            src="https://images.unsplash.com/photo-1564078516393-cf04bd966897?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80"
+            alt="work3"
+            class="aspect-square rounded-lg drop-shadow-md"
+          />
+        </div>
+        <div class="flex justify-center">
+          <img
+            src="https://images.unsplash.com/photo-1610123172763-1f587473048f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1601&q=80"
+            alt="work1"
+            class="aspect-square rounded-lg drop-shadow-md"
+          />
+        </div>
+        <div class="flex justify-center">
+          <img
+            src="https://images.unsplash.com/photo-1584622650111-993a426fbf0a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80"
+            alt="work4"
+            class="aspect-square rounded-lg drop-shadow-md"
+          />
+        </div>
       </div>
     </section>
     <section class="m-auto">
