--- a/index.html
+++ b/index.html
@@ -123,11 +123,42 @@
           </a>
         </div>
       </nav>
-      <img
-        src="https://images.unsplash.com/photo-1600489000022-c2086d79f9d4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1335&q=80"
-        alt="kitchen_01"
-        class="absolute z-0 -translate-y-32 brightness-50 blur-sm"
-      />
+      <section class="container">
+        <div class="slider-wrapper">
+          <div class="slider">
+            <img
+              id="slide-1"
+              src="https://images.unsplash.com/photo-1603712725038-e9334ae8f39f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2071&q=80"
+              alt="hero"
+              class="absolute z-0 -translate-y-32 brightness-50 blur-sm"
+            />
+            <img
+              id="slide-2"
+              src="https://images.unsplash.com/photo-1669101602108-fa5ba89507ee?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="hero"
+              class="absolute z-0 -translate-y-32 brightness-50 blur-sm"
+            />
+            <img
+              id="slide-3"
+              src="https://images.unsplash.com/photo-1431540015161-0bf868a2d407?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="hero"
+              class="absolute z-0 -translate-y-32 brightness-50 blur-sm"
+            />
+            <img
+              id="slide-4"
+              src="https://images.unsplash.com/photo-1624884269715-70759892cd29?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+              alt="hero"
+              class="absolute z-0 -translate-y-32 brightness-50 blur-sm"
+            />
+          </div>
+          <div class="slider-nav">
+            <a href="#slide-1"></a>
+            <a href="#slide-2"></a>
+            <a href="#slide-3"></a>
+            <a href="#slide-4"></a>
+          </div>
+        </div>
+      </section>
       <div
         class="text-center absolute z-10 text-white whitespace-nowrap top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2"
       >
